Edit quiz-container html structure and style sheet name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     text-align: center;
 }
 
-.container {
+.quiz-container {
     display: flex;
     justify-content: center;
     align-items: center;
