--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,24 +9,25 @@ html {
 
 /*General styling*/
 body {
-    margin: auto;
-    line-height: 0.5;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
     font-family: "Raleway", sans-serif;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .quiz-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     width: 60%;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
     background-color: aqua;
     box-sizing: border-box;
-    padding: 30px;
-    
+    padding: 30px;   
 }
 
 img {
