--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,16 @@ img {
     height: 60%;
   }
 
+#answer-box {
+    padding: 20px
+}
+
 .scores {
     display: inline-block;
     padding: 25px;
 }
 
 .reset-btn {
-    padding: 25px; 
+    padding: 5px; 
 }
 
